--- a/src/main/resources/jdbc.properties
+++ b/src/main/resources/jdbc.properties
@@ -1,7 +1,7 @@
 jdbc.driver=org.gjt.mm.mysql.Driver
-jdbc.url=jdbc:mysql://localhost:3306/farmerec?useUnicode=true&amp;characterEncoding=UTF-8
+jdbc.url=jdbc\:mysql\://localhost\:3306/farmerec3?useUnicode\=true&amp;characterEncoding\=UTF-8
 jdbc.username=root
-jdbc.password=123456
+jdbc.password=
 
 c3p0.initialPoolSize=1
 c3p0.minPoolSize=1
